modified style of the contact form so the boxes aligned correctly

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -135,10 +135,11 @@ h1{
  input[type=text], textarea {
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
     width: 100%;
-    padding: 12px 10px;
+    padding: 10px 12px;
     border: 1px solid #ccc;
     margin-top: 6px;
     margin-bottom: 20px;
+    box-sizing: border-box;
     resize: vertical;
 }
 
